texi2html/test/invalid/res_all/texi_tex_in_copying/tex_in_copying.texi.first
\input texinfo @c -*-texinfo-*-

@setfilename tex_in_copying.info



@node Top
@top Top node

@insertcopying

@menu
* chapter::
@end menu

@insertcopying

@node chapter
@chapter chapter

The fundamental equation is
@tex 
$$
2 a = \dot{\phi}
$$
@end tex

@insertcopying


@bye
